fix scrollbar

--- a/components/ChatContainer/ChatContainer.module.scss
+++ b/components/ChatContainer/ChatContainer.module.scss
@@ -4,7 +4,7 @@
     height: 90vh;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: flex;
     flex-direction: column-reverse;
     background-color: white;
